[gd_scene load_steps=13 format=3 uid="uid://bieuduw5y5fr4"]

[ext_resource type="Script" path="res://Scenes/TitleScreen/title_screen.gd" id="1_dtjfj"]
[ext_resource type="Texture2D" uid="uid://00dmpi21ym7" path="res://Assets/Images/Sorbetero-pixelated-256px.png" id="1_y5qui"]
[ext_resource type="FontFile" uid="uid://ch1yfvb3bpbgv" path="res://Assets/Font/Sedgwick_Ave/SedgwickAve-Regular.ttf" id="2_af64v"]
[ext_resource type="FontFile" uid="uid://by5f3g50o62f3" path="res://Assets/Font/Roboto/Roboto-Bold.ttf" id="4_chx41"]
[ext_resource type="Texture2D" uid="uid://cqvhe3hrjfhoh" path="res://Assets/Images/round_info_white_48dp.png" id="4_hktxx"]

[sub_resource type="LabelSettings" id="LabelSettings_pf1ij"]
font = ExtResource("2_af64v")
font_size = 160
outline_size = 40
outline_color = Color(0, 0, 0, 1)
shadow_size = 10
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(20, 10)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k47ny"]
content_margin_left = 30.0
content_margin_top = 10.0
content_margin_right = 30.0
content_margin_bottom = 10.0
bg_color = Color(0.25098, 0.25098, 0.25098, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1rqbj"]
content_margin_left = 30.0
content_margin_top = 10.0
content_margin_right = 30.0
content_margin_bottom = 10.0
bg_color = Color(0.12549, 0.12549, 0.12549, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="Theme" id="Theme_drul0"]
Button/colors/font_outline_color = Color(0, 0, 0, 1)
Button/constants/outline_size = 10
Button/font_sizes/font_size = 48
Button/fonts/font = ExtResource("4_chx41")
Button/styles/hover = SubResource("StyleBoxFlat_k47ny")
Button/styles/normal = SubResource("StyleBoxFlat_1rqbj")
Button/styles/pressed = SubResource("StyleBoxFlat_1rqbj")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vpiiu"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0, 0, 0, 0.862745)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="LabelSettings" id="LabelSettings_4skg6"]
font_size = 32
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_3maxx"]
font_size = 28
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[node name="TitleScreen" type="Control" node_paths=PackedStringArray("information_panel")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dtjfj")
information_panel = NodePath("InformationPanel")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_y5qui")
stretch_mode = 6

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -476.0
offset_top = 150.0
offset_right = 476.0
offset_bottom = 350.0
grow_horizontal = 2
text = "Istorya Book"
label_settings = SubResource("LabelSettings_pf1ij")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -164.5
offset_top = -425.0
offset_right = 164.5
offset_bottom = -75.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_drul0")
theme_override_constants/separation = 10

[node name="PlayStoryButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play Story"

[node name="CreateStoryButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Create Story"

[node name="Settings" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "Settings"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="InfoButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -70.0
offset_top = -70.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
icon = ExtResource("4_hktxx")
flat = true
expand_icon = true

[node name="InformationPanel" type="PanelContainer" parent="."]
visible = false
custom_minimum_size = Vector2(500, 700)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -550.0
offset_top = -340.0
offset_right = -50.0
offset_bottom = 360.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vpiiu")

[node name="ScrollContainer" type="ScrollContainer" parent="InformationPanel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="InformationPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="InformationPanel/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Information"
label_settings = SubResource("LabelSettings_4skg6")
horizontal_alignment = 1

[node name="InformationText" type="Label" parent="InformationPanel/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Developed by Ricardo Puato III for CS199 under the Web Science Group of the University of the Philippines Diliman Department of Computer Science.

Web Science Group:
Rowena Solamo - Adviser
Rommel Feria
Ligaya Leah Figueroa

Contact:
ricardopuatothird@gmail.com"
label_settings = SubResource("LabelSettings_3maxx")
autowrap_mode = 2

[connection signal="pressed" from="VBoxContainer/PlayStoryButton" to="." method="_on_play_story_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CreateStoryButton" to="." method="_on_create_story_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="InfoButton" to="." method="_on_info_button_pressed"]
